# mlops-bike

./: .pdm-python  .pre-commit-config.yaml  README.md  pyproject.toml  service.py  train.py
mlruns/0/: meta.yaml
mlruns/581846226084025135/: meta.yaml
mlruns/581846226084025135/018a5440abaa4d12b398f53a4188b029/: meta.yaml
mlruns/581846226084025135/02201f955dea430ba5d1b0262457e44e/: meta.yaml
mlruns/581846226084025135/03073cf1951a47af9ec0f692e50431b8/: meta.yaml
mlruns/581846226084025135/0745b15444f14bf4997db8912e309684/: meta.yaml
mlruns/581846226084025135/0809fd0a822543f380d8b331f9d04ed3/: meta.yaml
mlruns/581846226084025135/0cf265123c7a4c3e981a3bc58258f947/: meta.yaml
mlruns/581846226084025135/0d0b89833af94126a4d957cdad82c7fa/: meta.yaml
mlruns/581846226084025135/125a36a27f704ad39cf1c6092a25c215/: meta.yaml
mlruns/581846226084025135/18672b1533e847c2a1e0bed9b4f5ddea/: meta.yaml
mlruns/581846226084025135/2037569db10a478082df7c56b2a5e8ca/: meta.yaml
mlruns/581846226084025135/27af3a8ec62544aebbeb1586e537051d/: meta.yaml
mlruns/581846226084025135/2875cfb22701413a9201b39b995f1979/: meta.yaml
mlruns/581846226084025135/2b0ef272ed864d5e9e2ac39bc0ba8702/: meta.yaml
mlruns/581846226084025135/3f65434743eb463cb10fcf6ed54d5ebe/: meta.yaml
mlruns/581846226084025135/4145f42324a546baa2f33465a52ce946/: meta.yaml
mlruns/581846226084025135/50d415e5a48a4047ad5b9ee3a613ad96/: meta.yaml
mlruns/581846226084025135/53d0a5ea586243ae96b54dd4c3f3af1b/: meta.yaml
src/data/storage/: bike_sharing_train_features.csv
src/mlops_bike/: preprocess.py
(+275 files in other folders)
